Professional E-commerce with Retail/Wholesale Enquiry

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/cashew.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce</title>
+    <title>Premium Cashew Co. - Quality Cashews | Retail & Wholesale</title>
+    <meta name="description" content="Premium Cashew Co. - Your trusted partner for high-quality cashews. Retail and wholesale enquiries welcome. Best prices guaranteed." />
   </head>
   <body>
     <div id="root"></div>
